--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
+    "shadcn": "^3.4.2",
     "turbo": "^2.5.8",
     "typescript": "5.9.2"
   },
