--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -46,7 +46,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
